        Reviewed by Oliver.

http://bugs.webkit.org/show_bug.cgi?id=11667
        SVG: method .getTransformToElement(elt) in SVGLocatable not implemented

        Implement getTransformToElement functionality. Introduce virtual
        baseclass SVGLocatable to allow one implementation of the functionality.
        Finally cleanup some code.



Canonical link: https://commits.webkit.org/15097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17991 268f45cc-cd09-0410-ab3c-d52691b4dbfc