WebCore/ksvg2/svg/SVGLocatable.h
@@ -46,7 +46,7 @@ namespace WebCore {
         virtual FloatRect getBBox() const = 0;
         virtual SVGMatrix* getCTM() const = 0;
         virtual SVGMatrix* getScreenCTM() const = 0;
-        virtual SVGMatrix* getTransformToElement(SVGElement*, ExceptionCode&) const = 0;
+        SVGMatrix* getTransformToElement(SVGElement*, ExceptionCode&) const;
 
     protected:
         static SVGElement* nearestViewportElement(const SVGStyledElement*);
