WebCore/ksvg2/svg/SVGStyledLocatableElement.cpp
@@ -1,6 +1,6 @@
 /*
     Copyright (C) 2004, 2005 Nikolas Zimmermann <wildfox@kde.org>
-                  2004, 2005 Rob Buis <buis@kde.org>
+                  2004, 2005, 2006 Rob Buis <buis@kde.org>
 
     This file is part of the KDE project
 
@@ -31,10 +31,11 @@
 #include "SVGMatrix.h"
 #include "SVGSVGElement.h"
 
-using namespace WebCore;
+namespace WebCore {
 
-SVGStyledLocatableElement::SVGStyledLocatableElement(const QualifiedName& tagName, Document *doc)
-: SVGStyledElement(tagName, doc), SVGLocatable()
+SVGStyledLocatableElement::SVGStyledLocatableElement(const QualifiedName& tagName, Document* doc)
+    : SVGLocatable()
+    , SVGStyledElement(tagName, doc)
 {
 }
 
@@ -42,12 +43,12 @@ SVGStyledLocatableElement::~SVGStyledLocatableElement()
 {
 }
 
-SVGElement *SVGStyledLocatableElement::nearestViewportElement() const
+SVGElement* SVGStyledLocatableElement::nearestViewportElement() const
 {
     return SVGLocatable::nearestViewportElement(this);
 }
 
-SVGElement *SVGStyledLocatableElement::farthestViewportElement() const
+SVGElement* SVGStyledLocatableElement::farthestViewportElement() const
 {
     return SVGLocatable::farthestViewportElement(this);
 }
@@ -57,20 +58,16 @@ FloatRect SVGStyledLocatableElement::getBBox() const
     return SVGLocatable::getBBox(this);
 }
 
-SVGMatrix *SVGStyledLocatableElement::getCTM() const
+SVGMatrix* SVGStyledLocatableElement::getCTM() const
 {
     return SVGLocatable::getCTM(this);
 }
 
-SVGMatrix *SVGStyledLocatableElement::getScreenCTM() const
+SVGMatrix* SVGStyledLocatableElement::getScreenCTM() const
 {
     return SVGLocatable::getScreenCTM(this);
 }
 
-SVGMatrix *SVGStyledLocatableElement::getTransformToElement(SVGElement *, ExceptionCode&) const
-{
-    // TODO!
-    return 0;
 }
 
 // vim:ts=4:noet
