WebCore/ksvg2/svg/SVGStyledTransformableElement.cpp
@@ -1,6 +1,6 @@
 /*
     Copyright (C) 2004, 2005 Nikolas Zimmermann <wildfox@kde.org>
-                  2004, 2005 Rob Buis <buis@kde.org>
+                  2004, 2005, 2006 Rob Buis <buis@kde.org>
 
     This file is part of the KDE project
 
@@ -35,9 +35,9 @@
 #include "SVGStyledElement.h"
 #include "SVGTransformList.h"
 
-using namespace WebCore;
+namespace WebCore {
 
-SVGStyledTransformableElement::SVGStyledTransformableElement(const QualifiedName& tagName, Document *doc)
+SVGStyledTransformableElement::SVGStyledTransformableElement(const QualifiedName& tagName, Document* doc)
     : SVGStyledLocatableElement(tagName, doc)
     , SVGTransformable()
     , m_transform(new SVGTransformList)
@@ -50,22 +50,22 @@ SVGStyledTransformableElement::~SVGStyledTransformableElement()
 
 ANIMATED_PROPERTY_DEFINITIONS(SVGStyledTransformableElement, SVGTransformList*, TransformList, transformList, Transform, transform, SVGNames::transformAttr.localName(), m_transform.get())
 
-SVGMatrix *SVGStyledTransformableElement::localMatrix() const
+SVGMatrix* SVGStyledTransformableElement::localMatrix() const
 {
     return lazy_create<SVGMatrix>(m_localMatrix);
 }
 
-SVGMatrix *SVGStyledTransformableElement::getCTM() const
+SVGMatrix* SVGStyledTransformableElement::getCTM() const
 {
     return SVGTransformable::getCTM(this);
 }
 
-SVGMatrix *SVGStyledTransformableElement::getScreenCTM() const
+SVGMatrix* SVGStyledTransformableElement::getScreenCTM() const
 {
     return SVGTransformable::getScreenCTM(this);
 }
 
-void SVGStyledTransformableElement::updateLocalTransform(SVGTransformList *localTransforms)
+void SVGStyledTransformableElement::updateLocalTransform(SVGTransformList* localTransforms)
 {
     // Update cached local matrix
     RefPtr<SVGTransform> localTransform = localTransforms->concatenate();
@@ -78,10 +78,10 @@ void SVGStyledTransformableElement::updateLocalTransform(SVGTransformList *local
     }
 }
 
-void SVGStyledTransformableElement::parseMappedAttribute(MappedAttribute *attr)
+void SVGStyledTransformableElement::parseMappedAttribute(MappedAttribute* attr)
 {
     if (attr->name() == SVGNames::transformAttr) {
-        SVGTransformList *localTransforms = transformBaseValue();
+        SVGTransformList* localTransforms = transformBaseValue();
 
         ExceptionCode ec = 0;
         localTransforms->clear(ec);
@@ -92,12 +92,12 @@ void SVGStyledTransformableElement::parseMappedAttribute(MappedAttribute *attr)
         SVGStyledLocatableElement::parseMappedAttribute(attr);
 }
 
-SVGElement *SVGStyledTransformableElement::nearestViewportElement() const
+SVGElement* SVGStyledTransformableElement::nearestViewportElement() const
 {
     return SVGTransformable::nearestViewportElement(this);
 }
 
-SVGElement *SVGStyledTransformableElement::farthestViewportElement() const
+SVGElement* SVGStyledTransformableElement::farthestViewportElement() const
 {
     return SVGTransformable::farthestViewportElement(this);
 }
@@ -105,11 +105,6 @@ SVGElement *SVGStyledTransformableElement::farthestViewportElement() const
 FloatRect SVGStyledTransformableElement::getBBox() const
 {
     return SVGTransformable::getBBox(this);
-}
-
-SVGMatrix *SVGStyledTransformableElement::getTransformToElement(SVGElement*, ExceptionCode&) const
-{
-    return 0;
 }
 
 void SVGStyledTransformableElement::attach()
@@ -120,6 +115,7 @@ void SVGStyledTransformableElement::attach()
         renderer()->setLocalTransform(m_localMatrix->matrix());
 }
 
+}
 
 // vim:ts=4:noet
 #endif // SVG_SUPPORT
