WebCore/ksvg2/svg/SVGTextElement.h
@@ -45,7 +45,6 @@ namespace WebCore
         virtual FloatRect getBBox() const;
         virtual SVGMatrix* getCTM() const;
         virtual SVGMatrix* getScreenCTM() const;
-        virtual SVGMatrix* getTransformToElement(SVGElement*, ExceptionCode&) const { return 0; }
 
         virtual bool rendererIsNeeded(RenderStyle* style) { return StyledElement::rendererIsNeeded(style); }
         virtual RenderObject* createRenderer(RenderArena*, RenderStyle*);
